<resources>
    <string name="app_name">BANCO-JUALBE</string>
    <string name="bienvenida">Bienvenido/a</string>
    <string name="saldoActualBienvenida">"Tu saldo actual es de "</string>
    <string name="deseasHacer">¿Qué deseas hacer?</string>
    <string name="misCuentas">Mis cuentas</string>
    <string name="configuracion">Configuración</string>
    <string name="operaciones">Operaciones</string>
    <string name="misTarjetas">Mis tarjetas</string>
    <string name="transferencias">Transferencias</string>
    <string name="introduceUsuario">Introduce tu NIF</string>
    <string name="introduceContrasenya">Introduce la contraseña</string>
    <string name="introduceContraseñaActual">Introduce tu contraseña actual</string>
    <string name="introduceContraseñaNueva">Introduce tu nueva contraseña</string>
    <string name="confirmar">Confirmar</string>
    <string name="salir">Salir</string>
    <string name="volver">Volver</string>
    <string name="currentPassword_mismatch">La contraseña actual no coincide con la contraseña introducida.</string>
    <string name="newPasswords_mismatch">Las nuevas contraseñas introducidas no coinciden.</string>
    <string name="newPassword_changed">CONTRASEÑA CAMBIADA CON ÉXITO.</string>
    <string name="iniciarSesion">Iniciar sesión</string>
    <string name="entrar">Entrar</string>
    <string name="eligeCuenta">Elige cuenta</string>
    <string name="cuentaPropia">Cuenta propia</string>
    <string name="cuentaAjena">Cuenta ajena</string>
    <string name="cantidad">Cantidad:</string>
    <string name="enviarJustificante">Enviar justificante</string>
    <string name="enviar">Enviar</string>
    <string name="cancelar">Cancelar</string>
    <string name="escribeCuenta">Escribe el núm. de cuenta ajena</string>
    <string name="nuevoCliente">¿Es usted un nuevo cliente?\nPuede crear una nueva cuenta pulsando <b>aquí</b></string>
    <string name="titleNuevoCliente">Nuevo cliente</string>
    <string name="introduceContrasenya2">Introduce de nuevo la contraseña</string>
    <string name="introduceTuNombre">Introduce tu nombre</string>
    <string name="introduceApellidos">Introduce tus apellidos</string>
    <string name="introduceEmail">Introduce tu correo electrónico</string>
    <string name="movimientos">Movimientos</string>
    <string name="movimientosCuenta">Movimientos de su cuenta</string>
    <string name="importe">"Importe: "</string>
    <string name="cuentas">Cuentas</string>
    <string name="ultimosMovimientosCuenta">Últimos movimientos de su cuenta</string>
    <string name="ocultarSaldo">Ocultar saldo</string>
    <string name="verTodosMovimientos">Ver movimientos</string>
    <string name="borrar">Borrar</string>
    <string name="introduceCantidad">Introduce la cantidad</string>
    <string name="posicionGlobal">Posición Global</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pulseCuenta">Pulse en una de sus cuentas\npara ver sus movimientos.</string>
    <string name="logout">Logout</string>
    <string name="inicio">Inicio</string>
    <string name="navigation_drawer_open">Abrir menu</string>
    <string name="navigation_drawer_close">Cerrar menu</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="privacy">Privacidad</string>
    <string name="nifVisual">Mostrar NIF</string>
    <string name="showData">Ocultar datos al inicio</string>
    <string name="showDataOff">Se mostrarán todos los datos al inicio</string>
    <string name="showDataOn">Se ocultarán los datos al inicio o se mostrarán solo algunos</string>
    <string name="showNif">Mostrar NIF</string>
    <string name="showCurrentBalance">Show current balance</string>
    <string name="system">Sistema</string>
    <string name="language">Idioma</string>
    <string name="allMovements">All</string>
    <string name="inMovements">In movements</string>
    <string name="outMovements">Out movements</string>
</resources>