<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">


    <PreferenceCategory app:title="@string/system">

        <ListPreference
            app:key="language"
            app:title="@string/language"
            app:entries="@array/language"
            app:entryValues="@array/languageCode"

            />


    </PreferenceCategory>
    <PreferenceCategory app:title="@string/privacy">

        <SwitchPreferenceCompat
            app:key="showData"
            app:title="@string/showData"
            app:summaryOff="@string/showDataOff"
            app:summaryOn="@string/showDataOn"/>

    <SwitchPreferenceCompat
        app:dependency="showData"
        app:key="nif"
        app:title="@string/showNif" />

    <SwitchPreferenceCompat
        app:dependency="showData"
        app:key="currentBalance"
        app:title="@string/showCurrentBalance" />

</PreferenceCategory>

</PreferenceScreen>