<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".fragments.TransfersFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        >
        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transferencias"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginVertical="@dimen/default_margin_V"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/subtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginVertical="@dimen/default_margin"
            android:layout_marginHorizontal="@dimen/default_margin_H"
            app:layout_constraintTop_toBottomOf="@id/titulo"
            android:text="@string/eligeCuenta"
            />
        <Spinner
            android:id="@+id/spnCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginVertical="@dimen/default_margin"
            android:layout_marginHorizontal="@dimen/default_margin_H"
            app:layout_constraintTop_toBottomOf="@id/subtitulo"
            android:popupBackground="@color/black"
            />
        <RadioGroup
            android:layout_margin="@dimen/default_margin"
            android:checkedButton="@id/rdCPropia"
            android:id="@+id/rdCuentas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spnCuenta"
            android:layout_marginVertical="@dimen/default_margin_V"
            android:orientation="horizontal"
            >

            <RadioButton
                android:id="@+id/rdCPropia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cuentaPropia"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginHorizontal="@dimen/default_margin_H"
                android:textColor="@color/white"
                />
            <RadioButton
                android:id="@+id/rdCAjena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cuentaAjena"
                app:layout_constraintStart_toEndOf="@id/rdCPropia"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginHorizontal="@dimen/default_margin_H"
                android:textColor="@color/white"
                />
        </RadioGroup>
        <EditText
            android:layout_marginVertical="@dimen/default_margin"
            android:id="@+id/txCuentaAjena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rdCuentas"
            android:layout_marginHorizontal="@dimen/default_margin_H"
            android:hint="@string/escribeCuenta"
            android:visibility="invisible"
            android:textColor="@color/white"
            />
        <Spinner
            android:id="@+id/spnCuenta2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginVertical="@dimen/default_margin"
            android:paddingVertical="@dimen/default_margin_V"
            android:layout_marginHorizontal="@dimen/default_margin_H"
            app:layout_constraintTop_toBottomOf="@id/rdCuentas"
            android:popupBackground="@color/black"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvCantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/txCantidad"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/cantidad"
            android:paddingBottom="8dp"
            android:layout_marginHorizontal="@dimen/default_margin_H"

            />
        <EditText
            android:id="@+id/txCantidad"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/spnCuenta2"
            app:layout_constraintStart_toEndOf="@id/tvCantidad"
            android:layout_marginHorizontal="@dimen/default_margin_H"
            android:textColor="@color/white"
            android:hint="@string/introduceCantidad"
            />
        <Spinner
            android:id="@+id/spnDivisa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/txCantidad"
            app:layout_constraintBottom_toBottomOf="@id/txCantidad"
            android:paddingBottom="8dp"
            />
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cbJustificante"
            app:useMaterialThemeColors="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txCantidad"
            android:layout_marginVertical="@dimen/default_margin"
            android:textColor="@color/white"
            android:text="@string/enviarJustificante"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEnviar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/enviar"
            app:layout_constraintTop_toBottomOf="@id/cbJustificante"
            app:layout_constraintEnd_toEndOf="@id/guideLineV"
            android:layout_marginHorizontal="@dimen/default_margin_H"
            android:layout_marginVertical="@dimen/default_margin"
            />
        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/borrar"
            android:layout_marginHorizontal="@dimen/default_margin_H"
            android:layout_marginVertical="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/cbJustificante"
            app:layout_constraintStart_toStartOf="@id/guideLineV"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLineV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>