<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:context=".fragments.LoginFragment"
    >

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="@drawable/background_dark"
       android:theme="@style/Theme.BANCOJUALBE">
       <TextView
           android:id="@+id/titulo"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="120dp"
           android:textSize="@dimen/default_title"
           android:text="@string/iniciarSesion"
           android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
           app:layout_constraintEnd_toEndOf="@id/centroVertical"
           app:layout_constraintStart_toStartOf="@id/centroVertical"
           app:layout_constraintTop_toTopOf="parent"
           android:textColor="@color/white"
           />

       <androidx.constraintlayout.widget.Guideline
           android:id="@+id/centroVertical"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           app:layout_constraintGuide_percent="0.5"
           />


       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/user"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@id/titulo"
           android:layout_marginRight="30dp"
           android:layout_marginLeft="30dp"
           android:layout_marginTop="60dp"
           android:textColorHint="@color/white"

           >
           <EditText
               android:padding="@dimen/default_margin"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="60dp"
               android:hint="@string/introduceUsuario"
               android:textSize="@dimen/default_text"
               android:textColorHint="@color/white"
               android:textColor="@color/white"
               />
       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/password"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginRight="30dp"
           android:layout_marginLeft="30dp"
           app:layout_constraintTop_toBottomOf="@id/user"
           android:layout_marginTop="60dp"
           app:endIconMode="password_toggle"
           android:textColorHint="@color/white"
           app:endIconTint="@color/white"
           >


           <com.google.android.material.textfield.TextInputEditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/introduceContrasenya"
               android:textColorHint="@color/white"
               android:textColor="@color/white"
               android:inputType="textPassword"
               android:textSize="@dimen/default_text"
               android:padding="@dimen/default_margin"
               />
       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.button.MaterialButton
           android:id="@+id/entrar"
           android:layout_width="120dp"
           android:layout_height="wrap_content"
           android:text="@string/entrar"
           app:layout_constraintTop_toBottomOf="@id/password"
           app:layout_constraintEnd_toStartOf="@id/centroVertical"
           android:textAlignment="center"
           android:layout_marginTop="80dp"
           android:layout_marginRight="20dp"
           android:textSize="@dimen/default_text"
           />
       <com.google.android.material.button.MaterialButton
           android:id="@+id/salir"
           android:layout_width="120dp"
           android:layout_height="wrap_content"
           android:text="@string/salir"
           app:layout_constraintTop_toBottomOf="@id/password"
           app:layout_constraintStart_toStartOf="@id/centroVertical"
           android:layout_marginTop="80dp"
           android:layout_marginLeft="20dp"
           android:textSize="@dimen/default_text"
           android:textAlignment="center"
           />

       <TextView
           android:id="@+id/tvNuevoCliente"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginVertical="@dimen/default_margin"
           android:text="@string/nuevoCliente"
           android:textAlignment="center"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/entrar"
           android:textSize="@dimen/default_text"
           />





   </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>